# computor-agent

./: PRESENTATION.md  README.md  config-example-with-filesystem.yaml  pyproject.toml
docker/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: how-llms-use-filesystem.md  llm-filesystem-access.md  llm-tool-calling-flow.md  local-llm-setup.md
examples/: config.example.yaml  credentials.example.yaml  filesystem_with_ollama.py  llm_filesystem_integration.py  tutor.example.yaml
src/computor_agent/: __init__.py
src/computor_agent/cli/: __init__.py  main.py
src/computor_agent/filesystem/: __init__.py  config.py  exceptions.py  reader.py  search.py  tools.py  writer.py
src/computor_agent/git/: __init__.py  auth.py  exceptions.py  models.py  repository.py
src/computor_agent/llm/: __init__.py  base.py  config.py  dummy_provider.py  exceptions.py  factory.py  openai_provider.py
src/computor_agent/services/: __init__.py  repositories.py
src/computor_agent/settings/: __init__.py  config.py  credentials.py
src/computor_agent/tutor/: __init__.py  agent.py  client_adapter.py  config.py  context.py  context_builder.py  scheduler.py  summary_store.py  trigger.py
src/computor_agent/tutor/intents/: __init__.py  classifier.py  types.py
src/computor_agent/tutor/prompts/: __init__.py  templates.py
src/computor_agent/tutor/security/: __init__.py  gate.py  types.py
src/computor_agent/tutor/services/: __init__.py  artifacts.py  comments.py  history.py  progress.py  reference.py  test_results.py
src/computor_agent/tutor/strategies/: __init__.py  base.py  implementations.py  registry.py
tests/: __init__.py  test_filesystem.py  test_git.py  test_llm.py  test_services.py  test_settings.py  test_tutor.py
